@@ -3,12 +3,11 @@ package net.congueror.cgalaxy.gui.space_suit;
 import com.mojang.blaze3d.systems.RenderSystem;
 import com.mojang.blaze3d.vertex.PoseStack;
 import net.congueror.cgalaxy.CGalaxy;
-import net.congueror.cgalaxy.item.ColdProtectionUnitItem;
-import net.congueror.cgalaxy.item.HeatProtectionUnitItem;
-import net.congueror.cgalaxy.item.RadiationProtectionUnitItem;
+import net.congueror.cgalaxy.items.*;
 import net.congueror.cgalaxy.util.CGConfig;
 import net.congueror.cgalaxy.util.SpaceSuitUtils;
 import net.congueror.clib.CLib;
+import net.congueror.clib.util.MathHelper;
 import net.congueror.clib.util.RenderingHelper;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.components.Button;
@@ -17,6 +16,7 @@ import net.minecraft.client.gui.screens.inventory.AbstractContainerScreen;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.TranslatableComponent;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.entity.EquipmentSlot;
 import net.minecraft.world.entity.player.Inventory;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
@@ -24,7 +24,6 @@ import net.minecraft.world.item.ItemStack;
 import javax.annotation.Nonnull;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
 
 public class SpaceSuitScreen extends AbstractContainerScreen<SpaceSuitContainer> {
     int rotation;
@@ -56,11 +55,13 @@ public class SpaceSuitScreen extends AbstractContainerScreen<SpaceSuitContainer>
 
     @Override
     protected void renderLabels(@Nonnull PoseStack pPoseStack, int pMouseX, int pMouseY) {
+        int[] backgroundColor = MathHelper.DecimalRGBtoRGB(CGConfig.GUI_COLOR.get().rgb);
+        int textColor = MathHelper.RGBtoDecimalRGB(Math.min(255, backgroundColor[0] * 2), Math.min(255, backgroundColor[1] * 2), Math.min(255, backgroundColor[2] * 2));
         String title = new TranslatableComponent("gui.cgalaxy.space_suit").getString();
-        this.font.draw(pPoseStack, title, ((float) (imageWidth / 2 - font.width(title) / 2)) + 5, 4, CGConfig.GUI_COLOR.get().rgb);
+        this.font.draw(pPoseStack, title, ((float) (imageWidth / 2 - font.width(title) / 2)) + 5, 4, textColor);
 
         String inv = new TranslatableComponent("key.categories.inventory").getString();
-        this.font.draw(pPoseStack, inv, ((float) (imageWidth / 2 - font.width(inv) / 2)) - 55, 86, CGConfig.GUI_COLOR.get().rgb);
+        this.font.draw(pPoseStack, inv, ((float) (imageWidth / 2 - font.width(inv) / 2)) - 55, 86, textColor);
     }
 
     @Override
@@ -73,16 +74,19 @@ public class SpaceSuitScreen extends AbstractContainerScreen<SpaceSuitContainer>
     @Override
     protected void renderBg(@Nonnull PoseStack pPoseStack, float pPartialTicks, int pMouseX, int pMouseY) {
         RenderSystem.enableBlend();
-        RenderSystem.setShaderColor(1, 1, 1, 1);
-        String textureName = CGConfig.GUI_COLOR.get().toString().equals("GREEN") ? "space_suit_gui.png" : CGConfig.GUI_COLOR.get().toString().toLowerCase() + "/" + CGConfig.GUI_COLOR.get().toString().toLowerCase() + "_space_suit_gui.png";
-        RenderSystem.setShaderTexture(0, new ResourceLocation(CGalaxy.MODID, "textures/gui/space_suit/" + textureName));
-        this.blit(pPoseStack, this.leftPos, this.topPos, 0, 0, this.imageWidth, this.imageHeight + 11);
+        int[] backgroundColor = MathHelper.DecimalRGBtoRGB(CGConfig.GUI_COLOR.get().rgb);
+        RenderSystem.setShaderColor(backgroundColor[0] / 255f, backgroundColor[1] / 255f, backgroundColor[2] / 255f, 1f);
+        RenderSystem.setShaderTexture(0, new ResourceLocation(CGalaxy.MODID, "textures/gui/space_suit/space_suit_gui.png"));
+        this.blit(pPoseStack, this.leftPos, this.topPos, 0, 0, this.imageWidth, this.imageHeight + 12);
         this.blit(pPoseStack, this.leftPos - 22, this.topPos + 9, 177, 3, 23, 19);
+
+        RenderSystem.setShaderColor(1, 1, 1, 1);
         this.blit(pPoseStack, this.leftPos + 44, this.topPos + 14, 176, 23, 16, 16);
         this.blit(pPoseStack, this.leftPos + 44, this.topPos + 33, 190, 23, 16, 16);
         this.blit(pPoseStack, this.leftPos + 44, this.topPos + 52, 190, 23, 16, 16);
+
         assert minecraft != null;
-        List<Item> items = SpaceSuitUtils.deserializeContents(minecraft.player).stream().map(ItemStack::getItem).collect(Collectors.toList());
+        List<Item> items = SpaceSuitUtils.deserializeContents(minecraft.player).stream().map(ItemStack::getItem).toList();
         AtomicBoolean flag1 = new AtomicBoolean(true);
         AtomicBoolean flag2 = new AtomicBoolean(true);
         AtomicBoolean flag3 = new AtomicBoolean(true);
@@ -97,14 +101,25 @@ public class SpaceSuitScreen extends AbstractContainerScreen<SpaceSuitContainer>
                 flag3.set(false);
             }
         });
-        if (flag1.get()) this.blit(pPoseStack, this.leftPos + 153, this.topPos + 24, 206, 38, 16, 16);
-        if (flag2.get()) this.blit(pPoseStack, this.leftPos + 153, this.topPos + 43, 191, 38, 16, 16);
-        if (flag3.get()) this.blit(pPoseStack, this.leftPos + 153, this.topPos + 62, 176, 38, 16, 16);
+        if (flag1.get()) this.blit(pPoseStack, this.leftPos + 153, this.topPos + 14, 206, 38, 16, 16);
+        if (flag2.get()) this.blit(pPoseStack, this.leftPos + 153, this.topPos + 33, 191, 38, 16, 16);
+        if (flag3.get()) this.blit(pPoseStack, this.leftPos + 153, this.topPos + 52, 176, 38, 16, 16);
+
         rotateButton.visible = true;
         settingsButton.visible = true;
 
         assert this.minecraft != null;
         assert this.minecraft.player != null;
         RenderingHelper.renderEntityInInventoryWithRotations(this.leftPos + 20, this.topPos + 80, 30, this.leftPos + 20 - pMouseX, this.topPos + 30 - pMouseY, this.minecraft.player, rotation);
+
+        RenderSystem.setShaderTexture(0, new ResourceLocation(CLib.MODID, "textures/item/iron_gear.png"));
+        blit(pPoseStack, this.leftPos - 16, this.topPos + 10, 0, 0, 16, 16, 16, 16);
+
+        SpaceSuitUpgradeItem upgradeItem = ((SpaceSuitItem) minecraft.player.getItemBySlot(EquipmentSlot.HEAD).getItem()).getTier(minecraft.player.getItemBySlot(EquipmentSlot.HEAD));
+        if (upgradeItem != null) {
+            RenderSystem.setShaderColor(1, 1, 1, 0.2f);
+            RenderSystem.setShaderTexture(0, new ResourceLocation(upgradeItem.getRegistryName().getNamespace(), "textures/item/" + upgradeItem.getRegistryName().getPath() + ".png"));
+            blit(pPoseStack, this.leftPos + 153, this.topPos + 71, 0, 0, 16, 16, 16, 16);
+        }
     }
 }
